Skills, Logo, Mail

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
  
      <!-- Site Metas -->
     <title>Devanshee Vankani</title>  
-    <meta name="keywords" content="">
+    <meta name="keywords" content="portfolio">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Devanshee Vankani">
+    <link rel="shortcut icon" href="uploads/brand.png" type="image/png">
+
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="uploads/b5.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -46,8 +47,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-			<!-- <img class="img-fluid" src="images/logo.png" alt="" /> -->
-            Devanshee Vankani
+			<img class="navbar-brand" src="uploads/b8.png" alt=""/>
+            <!-- Devanshee Vankani -->
 		</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           
@@ -69,6 +70,9 @@
               </li>
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contect Me</a>
+            </li>
+            <li class="nav-item">
+                <a href="resume/Devanshee_Vankani_Resume.pdf" class="nav-link" style="  border-color: aliceblue;" download data-text="Download Resume"><span>Resume</span></a>
             </li>
           </ul>
         </div>
@@ -102,14 +106,60 @@
                         <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
 						<p>Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo.</p>
 
-                        <a href="resume/Devanshee_Vankani_Resume.pdf" class="sim-btn btn-hover-new" download data-text="Download CV"><span>Download CV</span></a>
+                        <a href="resume/Devanshee_Vankani_Resume.pdf" class="sim-btn btn-hover-new" download data-text="Download Resume"><span>Download Resume</span></a>
+                    
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
                 <div class="col-md-6">
-                    <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded">
-                    </div><!-- end media -->
+                    <!-- <div class="right-box-pro wow fadeIn"> -->
+                        <!-- <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded"> -->
+
+                        <div class="skills-row animate" data-animate="fadeInDown">
+                            <div class="row">
+                                <div class="col-md-8 offset-md-2">   
+                                    <div class="skill-item">
+                                        <h6>Flutter</h6>
+                                        <div class="skill-bar">
+                                            <span>68%</span>
+                                            <div class="filled-bar"></div>
+                                        </div>          
+                                    </div>
+                                    <div class="skill-item">
+                                        <h6>Angular Framework</h6>
+                                        <div class="skill-bar">
+                                            <span>49%</span>
+                                            <div class="filled-bar-2"></div>
+                                        </div>          
+                                    </div>
+                                    <div class="skill-item">
+                                        <h6>.NET Core</h6>
+                                        <div class="skill-bar">
+                                            <span>70%</span>
+                                            <div class="filled-bar-3"></div>
+                                        </div>          
+                                    </div>
+                                    <div class="skill-item last-skill">
+                                        <h6>Git and Github</h6>
+                                        <div class="skill-bar">
+                                            <span>64%</span>
+                                            <div class="filled-bar-4"></div>
+                                        </div>          
+                                    </div>  
+                                    <div class="skill-item last-skill">
+                                        <h6>Management</h6>
+                                        <div class="skill-bar">
+                                            <span>83%</span>
+                                            <div class="filled-bar-5"></div>
+                                        </div>          
+                                    </div>                   
+                                </div>
+                            </div>
+                        </div>
+
+
+                    <!-- </div> -->
+                    <!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
         </div><!-- end container -->
