--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box px-5 pt-5">
-                        <h2>About Me.</h2>
-                        <p>Hello World! I am Devanshee Vankani, pre-final year student, pursuing Computer Engineering at
+                        <h3 style="font-size:38px;">About Me</h3> <br>
+                        <p style="color: black; font-size: large;">Hello World! I am Devanshee Vankani, pre-final year student, pursuing <samp>Computer Engineering💻 </samp>at
                             Dharmsinh Desai University, Nadiad. I enjoy working on new technologies and have worked on
-                            full stack development using MEAN stack, ASP.NET , .NET Core, mobile application development
+                            full stack development using MEAN stack, ASP.NET, .NET Core, mobile application development
                             using Flutter. Apart from this I have scraped a few websites using Python (Selenium and
                             BeautifulSoup), trained a Logistic Regression Model. And yes, currently I am learning cloud
-                            computing on Google Cloud Platform and Microsoft Azure.
-                        </p>
-                        <p>I am an active committee member at various technical and social clubs at my university which
+                            computing on Google Cloud Platform and Microsoft Azure☁️.
+                        </p> <br>
+                        <p style="color: black; font-size: large;"> I am an active committee member at various technical and social clubs at my university which
                             has helped me develop my soft skills.</p>
 
 
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                                 <div class="skill-item">
-                                    <h6>Angular Framework</h6>
+                                    <h6>MEAN STACK</h6>
                                     <div class="skill-bar">
                                         <span>49%</span>
                                         <div class="filled-bar-2"></div>
@@ -187,7 +187,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>Projects</h3>
-                <p>Here are some of the projects that I have developed.
+                <p style="color: black;">Here are some of the projects that I have developed.
                 </p>
             </div><!-- end title -->
 
@@ -204,7 +204,7 @@
                                 <span class="badge badge-secondary">Selenium</span>
                                 <span class="badge badge-info">GCP</span>
                             </h3>
-                            <p>Plax tech: The University Placement Portal is a one stop shop for preparing for the
+                            <p style="color: black;">Plax tech: The University Placement Portal is a one stop shop for preparing for the
                                 placement. Be it on-campus placement or off-campus opportunities, you can get
                                 information for both. Also you get exposed to various kinds of aptitude test subjects
                                 along with competitive coding question. The expert's ultimate advice for the placement
@@ -231,7 +231,7 @@
                                 <!-- <span class="badge badge-secondary">Microsoft SQL Server database</span> -->
 
                             </h3>
-                            <p>This is a Blog Engine developed using Microsoft's .NET Technology. The project provides
+                            <p style="color: black;">This is a Blog Engine developed using Microsoft's .NET Technology. The project provides
                                 basic modules like user management, allowing users to have CRUD on their profiles.
                                 Like-wise the users can also perform CRUD on their blog articles. Also, the blog has
                                 friend management module.
@@ -255,9 +255,8 @@
                                 <span class="badge badge-secondary">Express</span>
 
                             </h3>
-                            <p>Project Details:
-
-                                Project has 3 users (Admin, Faculty, Student)
+                            <p  style="color: black;">
+                                System has 3 users (Admin, Faculty, Student)
                                 It has the following features : All the users can manage their profiles. Faculty can
                                 upload the lecture resources
                                 and students can view the same Students can upload the submission
@@ -281,7 +280,7 @@
                             <h3><span class="badge badge-info">php</span>
                                 <span class="badge badge-secondary">Bootstrap</span>
                             </h3>
-                            <p>This project is developed using php. This is a photo sharing platform with the following
+                            <p style="color: black;">This project is developed using php. This is a photo sharing platform with the following
                                 features like Users can add/remove
                                 the friends , Users can share/edit/delete the photographs , Users can like the
                                 photographs of their friends, Users can add a comment to the photographs of their
@@ -300,7 +299,7 @@
                             <h4 class="pt-4">Flutter Mini-Projects</h4>
                             <h3><span class="badge badge-info">Flutter</span>
                             </h3>
-                            <p>There are some modules I have developed using Flutter which are rich with animations and
+                            <p style="color: black;">There are some modules I have developed using Flutter which are rich with animations and
                                 certain libraries. There are 3 projects as follows: <br>
                                 1. Mobile Quiz <br>
                                 2. Start-Up Name Generator <br>
@@ -326,7 +325,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>Experiences</h3>
-                <p>I continuously flag my presence at various clubs in my university. I am active committee member at
+                <p style="color: black;">I continuously flag 🚩 my presence at various clubs in my university. I am active committee member at
                     the
                     following clubs:
                 </p>
@@ -338,9 +337,9 @@
                         <div class="ser-icon">
                             <img src="./uploads/csi-logo.jpeg" alt="batch" class="img" style="height: 100%;">
                         </div><br>
-                        <h3>Computer Society Of India, DDU</h3>
-                        <h5>--Head Of Events--</h5>
-                        <p>We regularly organize technical <a
+                        <h3>Computer Society Of India, DDU</h3><br>
+                        <h5>--Head Of Events</h5>
+                        <p style="color: black;">We regularly organize technical <a
                                 href="https://www.linkedin.com/posts/activity-6744142519732334592-4RDU" target="_blank">
                                 <u>events and workshops</u> </a> on emerging technologies for our campus
                             students. We also have training sessions for our junior committee members.</p>
@@ -351,9 +350,9 @@
                         <div class="ser-icon">
                             <img src="./uploads/nss-lg.jpeg" alt="batch" class="img" style="height: 100%;">
                         </div> <br>
-                        <h3>National Service Scheme, DDU</h3>
-                        <h5>--Unit Coordinator--</h5>
-                        <p>"Not me but you" is our moto. Serving the Society gives me immense satisfaction. Being a NSS
+                        <h3>National Service Scheme, DDU</h3><br>
+                        <h5>--Unit Coordinator</h5>
+                        <p style="color: black;">"Not me but you" is our moto. Serving the Society gives me immense satisfaction. Being a NSS
                             volunteer, we regularly conduct
                             activities for the welfare of the society. </p>
                     </div>
@@ -363,9 +362,9 @@
                         <div class="ser-icon">
                             <img src="./uploads/level-beta.png" alt="batch" class="img" style="height: 100%;">
                         </div><br>
-                        <h3>Microsoft Learn Student Ambassador</h3>
-                        <h5>--Beta MLSA--</h5>
-                        <p>Learning and growing with a community is fun! Especially, when it's the entire globe to
+                        <h3>Microsoft Learn Student Ambassador</h3><br>
+                        <h5>--Beta MLSA</h5>
+                        <p style="color: black;">Learning and growing with a community is fun! Especially, when it's the entire globe to
                             interact with is a different emotion. As MLSA, I take technical <a
                                 href="https://www.linkedin.com/posts/activity-6778410579422916608-6Fd5"
                                 target="_blank"><u> seminars</u></a> and also manage
@@ -378,9 +377,9 @@
                             <img src="./uploads/dsc-lg.png" alt="batch" class="img" style="height: 100%;">
                             <!-- <i class="flaticon-process"></i> -->
                         </div><br>
-                        <h3>Developers Student Club, DDU</h3>
-                        <h5>--Cloud Team Member--</h5>
-                        <p>Cloud fascinates me and also to my team and so we try to learn something new each day.
+                        <h3>Developers Student Club, DDU</h3><br>
+                        <h5>--Cloud Team Member</h5>
+                        <p style="color: black;">Cloud fascinates me and also to my team and so we try to learn something new each day.
                             Recently I delivered a workshop on <a
                                 href="https://www.linkedin.com/posts/activity-6778410579422916608-6Fd5"
                                 target="_blank"><u> Google Maps Platsform and GCP</u> </a>.</p>
